Title and datetime input skeleton

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   json_annotation: ^4.9.0
   freezed_annotation: ^3.1.0
+  date_time_picker: ^2.1.0
 
 dev_dependencies:
   flutter_test:
