--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   json_annotation: ^4.9.0
   freezed_annotation: ^3.1.0
   date_time_picker: ^2.1.0
+  provider: ^6.1.5
+  sqlite3: ^2.8.0
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
