--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   date_time_picker: ^2.1.0
   provider: ^6.1.5
   sqlite3: ^2.8.0
+  sqlite3_flutter_libs: ^0.5.39
   uuid: ^4.5.1
 
 dev_dependencies:
